# archive-ai-by-analogvibe

./: .gitignore  README.md
.github/workflows/: build-macos.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core-logic/: Cargo.toml
src-tauri/core-logic/src/: brand_detector.rs  date_extractor.rs  execution_engine.rs  lib.rs  logger.rs  project_analyzer.rs  scanner.rs  smb_resolver.rs  template_engine.rs
src-tauri/data/: brands.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  state.rs
src-tauri/templates/: animaciones.json  coberturas.json  producciones.json  recursos.json
