[package]
name = "archive-ai"
version = "2.0.0"
edition = "2021"
description = "Archive AI — gestor inteligente de proyectos audiovisuales"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
archive-ai-core = { path = "core-logic" }
