[package]
name = "archive-ai-core"
version = "2.0.0"
edition = "2021"
description = "Archive AI — core business logic (scanner, analyzer, brands, templates, execution). Pure Rust, no GUI/Tauri dependency, so it can be built and unit-tested standalone."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
unicode-normalization = "0.1"
pathdiff = "0.2"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
